{
    "name": "PlayerActionMap",
    "maps": [
        {
            "name": "Gamepad",
            "id": "c866f438-9a08-4a10-b9f9-8d7cf7931380",
            "actions": [
                {
                    "name": "GamepadStrenght",
                    "type": "Value",
                    "id": "f96633d4-39bb-47a5-9995-ba42fe8c2439",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Throw Player",
                    "type": "Button",
                    "id": "f547db76-7812-46c1-9c7b-f21f8c3fe600",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "CancelThrow",
                    "type": "Button",
                    "id": "14f4e278-ce55-4bc7-b79e-6dfdfe18b884",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "FreeCam",
                    "type": "Value",
                    "id": "4989151e-72b5-48fe-bbb5-eea2d8a909f1",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "PauseMenu",
                    "type": "Button",
                    "id": "4d550153-e311-4107-87b9-22cd7ef4bca6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RoomCam",
                    "type": "Button",
                    "id": "a2c79c0b-55ae-4b1d-923c-f1bbe61ce3d3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "4f87ae14-2ef3-448a-b499-ad1e9610afd6",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GamepadStrenght",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3cd52645-d479-4a58-8e92-f32b76a4e43f",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Throw Player",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "73cceba9-c0f4-4b4a-bf45-bf3389db2508",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FreeCam",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8bb8bd9d-bbba-4836-acec-d64283c42d23",
                    "path": "<Gamepad>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PauseMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "26d4424c-ac7b-43a7-afb0-8e2552cb80b9",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RoomCam",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a8b3f563-de3c-436a-9717-98297b275acb",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CancelThrow",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Mouse/Keyboard",
            "id": "3a2aa13f-b26f-46be-8b8a-9da547179610",
            "actions": [
                {
                    "name": "MouseStartDrag",
                    "type": "Button",
                    "id": "5dc5b5a5-9f26-4cd6-91a4-a99171f3c6e8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MouseStrenght",
                    "type": "Value",
                    "id": "0e48db39-acc7-46f5-824c-9fdc566444d6",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "RoomCam",
                    "type": "Button",
                    "id": "9eec3fb6-c41e-42d7-aeda-34b17f7fe899",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MouseCancelThrow",
                    "type": "Button",
                    "id": "b6fedc0f-8e3f-4790-a0ed-66c9ab48b553",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "FreeCam",
                    "type": "Value",
                    "id": "fc2e745f-8798-44b8-a305-4352426b295d",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "PauseMenu",
                    "type": "Button",
                    "id": "f74c3042-1184-4252-a3c5-79fb1d468777",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "060298e0-395e-4f9e-b4d7-a25e5a31337d",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseStartDrag",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "32627dc9-3601-40e5-8ff2-b6c41ee50bbf",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseStrenght",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "117826e2-d3e5-48f1-8d4b-4d9ed1fc166b",
                    "path": "<Mouse>/middleButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RoomCam",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6e27f04d-03e6-4e19-8c2a-a731957bc36e",
                    "path": "<Keyboard>/c",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RoomCam",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8a6cb2a4-6fc6-4f71-8751-0ff9827c193e",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseCancelThrow",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a54f9ed7-e6d4-4870-8ea2-3011bddff833",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FreeCam",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bd4ab856-b143-45cb-9c44-7be20cb3dbac",
                    "path": "<Keyboard>/tab",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PauseMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Cheat",
            "id": "0ccd1fb2-2384-4316-aa70-6f133026c6e2",
            "actions": [
                {
                    "name": "Reload Scene",
                    "type": "Button",
                    "id": "6e714593-840a-467e-91f6-ecbefae76fdd",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "No-Clip",
                    "type": "Button",
                    "id": "9ed9e3d5-dbb1-4d59-9ba5-9b55a1220681",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "No-Clip Control",
                    "type": "Value",
                    "id": "e6a7a912-7270-407f-9efe-076ddbf7be8f",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "5dc43dd1-5049-463b-9d00-df1220334d7c",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Reload Scene",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "46b72e63-06b2-4264-920b-354c3e160e83",
                    "path": "<Keyboard>/n",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "No-Clip",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "0915eb11-52e2-47a6-bcd8-b653c2eefbe5",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "No-Clip Control",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "d98d4bf8-25ba-49f8-bdc1-32d9cf766059",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "No-Clip Control",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "53e80e15-d561-45cc-b8c2-0165c7654de9",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "No-Clip Control",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "30eb8abe-bcd4-4f39-a7ba-f5f9d0eb9719",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "No-Clip Control",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "d16c8bec-fd07-462d-a3b3-7019b2d84ca7",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "No-Clip Control",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "MainMenu",
            "id": "4e3b26f7-b632-45cd-be3e-0f0ff854419b",
            "actions": [
                {
                    "name": "New action",
                    "type": "Button",
                    "id": "70762f9f-2db8-40ae-8467-3ea717f788b3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "38eb72fd-132e-4122-aa42-ef8a88d701db",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "New action",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Swap",
            "id": "30c0c3e5-ceb2-4284-bae3-ae39b48cf8a0",
            "actions": [
                {
                    "name": "ToGamepad",
                    "type": "Button",
                    "id": "42ff434e-11fb-4c66-9ad2-932cb5a75265",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ToMouseKeyboard",
                    "type": "Button",
                    "id": "cfe998ff-257e-4844-81a5-b3de69f6f69d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "c4234273-0399-4d1f-915a-cb5004b5eec8",
                    "path": "<Gamepad>/*",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToGamepad",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9365525e-58b2-4102-ae03-55ebeafc4e60",
                    "path": "<Keyboard>/anyKey",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToMouseKeyboard",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "37e5b929-2ed8-4130-991f-651cf16f68c9",
                    "path": "<Mouse>/*",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToMouseKeyboard",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}